EROPSPT-390: Add endpoint for VAC photos (#320)
* EROPSPT-390: Add endpoint for VAC photos

* EROPSPT-390: Add VAC photo urls to summary responses
