# src/main/kotlin/uk/gov/dluhc/printapi/rest/CertificateSummaryController.kt
@@ -12,8 +12,10 @@ import uk.gov.dluhc.printapi.mapper.CertificateSummaryResponseMapper
 import uk.gov.dluhc.printapi.mapper.CertificateSummarySearchResponseMapper
 import uk.gov.dluhc.printapi.models.CertificateSearchSummaryResponse
 import uk.gov.dluhc.printapi.models.CertificateSummaryResponse
+import uk.gov.dluhc.printapi.models.PreSignedUrlResourceResponse
 import uk.gov.dluhc.printapi.service.CertificateSummarySearchService
 import uk.gov.dluhc.printapi.service.CertificateSummaryService
+import uk.gov.dluhc.printapi.service.S3AccessService
 import javax.validation.Valid
 
 @RestController
@@ -21,6 +23,7 @@ import javax.validation.Valid
 class CertificateSummaryController(
     private val certificateSummaryService: CertificateSummaryService,
     private val certificateSearchSummaryService: CertificateSummarySearchService,
+    private val s3AccessService: S3AccessService,
     private val certificateSummaryResponseMapper: CertificateSummaryResponseMapper,
     private val certificateSummarySearchResponseMapper: CertificateSummarySearchResponseMapper,
     private val certificateSearchQueryStringParametersMapper: CertificateSearchQueryStringParametersMapper
@@ -32,7 +35,18 @@ class CertificateSummaryController(
         @RequestParam applicationId: String,
     ): CertificateSummaryResponse {
         return certificateSummaryService.getCertificateSummary(eroId, VOTER_CARD, applicationId)
-            .let { certificateSummaryResponseMapper.toCertificateSummaryResponse(it) }
+            .let { certificateSummaryResponseMapper.toCertificateSummaryResponse(it, eroId) }
+    }
+
+    @GetMapping("/eros/{eroId}/certificates/photo")
+    @PreAuthorize(HAS_ERO_VC_ADMIN_AUTHORITY)
+    fun getCertificatePhoto(
+        @PathVariable eroId: String,
+        @RequestParam applicationId: String,
+    ): PreSignedUrlResourceResponse {
+        val certificate = certificateSummaryService.getCertificateSummary(eroId, VOTER_CARD, applicationId)
+        val preSignedUrl = s3AccessService.generatePresignedGetCertificatePhotoUrl(certificate.photoLocationArn)
+        return PreSignedUrlResourceResponse(preSignedUrl = preSignedUrl)
     }
 
     @GetMapping("/eros/{eroId}/certificates/search")
@@ -47,7 +61,7 @@ class CertificateSummaryController(
                 searchQueryParameters = searchQueryStringParameters
             )
         with(certificateSearchSummaryService.searchCertificateSummaries(searchCriteriaDto)) {
-            return certificateSummarySearchResponseMapper.toCertificateSearchSummaryResponse(this)
+            return certificateSummarySearchResponseMapper.toCertificateSearchSummaryResponse(this, eroId)
         }
     }
 
