# src/main/resources/openapi/PrintAPIs.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: Print APIs
-  version: '1.23.1'
+  version: '1.23.2'
   description: Print APIs
 #
 # --------------------------------------------------------------------------------
@@ -84,6 +84,85 @@ paths:
       x-amazon-apigateway-integration:
         type: HTTP_PROXY
         uri: '${base_uri}/eros/{eroId}/certificates'
+        requestParameters:
+          integration.request.path.eroId: method.request.path.eroId
+          integration.request.header.x-request-id: context.requestId
+        responseParameters:
+          method.response.header.Access-Control-Allow-Headers: '''Content-Type,X-Amz-Date,Authorization,X-Api-Key'''
+          method.response.header.Access-Control-Allow-Methods: '''*'''
+          method.response.header.Access-Control-Allow-Origin: '''*'''
+        connectionType: VPC_LINK
+        connectionId: '${vpc_connection_id}'
+        httpMethod: GET
+
+  '/eros/{eroId}/certificates/photo':
+    parameters:
+      - name: eroId
+        description: The ID of the Electoral Registration Office responsible for the application.
+        schema:
+          type: string
+        in: path
+        required: true
+    options:
+      summary: CORS support
+      description: |
+        Enable CORS by returning correct headers
+      tags:
+        - Voter Authority Certificates (VAC)
+      responses:
+        200:
+          description: Default response for CORS method
+          headers:
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+            Access-Control-Allow-Methods:
+              schema:
+                type: string
+            Access-Control-Allow-Headers:
+              schema:
+                type: string
+          content: { }
+      x-amazon-apigateway-integration:
+        type: mock
+        requestTemplates:
+          application/json: |
+            {
+              "statusCode" : 200
+            }
+        responses:
+          default:
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Headers: '''Content-Type,X-Amz-Date,Authorization,X-Api-Key'''
+              method.response.header.Access-Control-Allow-Methods: '''*'''
+              method.response.header.Access-Control-Allow-Origin: '''*'''
+            responseTemplates:
+              application/json: |
+                {}
+    get:
+      summary: Returns the Voter Authority Certificate photo for a VAC application
+      description: Returns the Voter Authority Certificate photo for a VAC application
+      tags:
+        - Voter Authority Certificates (VAC)
+      parameters:
+        - name: applicationId
+          description: An identifier of a Voter Authority Certificate application
+          schema:
+            type: string
+          in: query
+          required: true
+      responses:
+        '200':
+          $ref: '#/components/responses/PreSignedUrlResource'
+        '404':
+          $ref: '#/components/responses/404ErrorResponse'
+      operationId: get-voter-authority-certificate-photo-by-application-id
+      security:
+        - eroUserCognitoUserPoolAuthorizer: [ ]
+      x-amazon-apigateway-integration:
+        type: HTTP_PROXY
+        uri: '${base_uri}/eros/{eroId}/certificates/photo'
         requestParameters:
           integration.request.path.eroId: method.request.path.eroId
           integration.request.header.x-request-id: context.requestId
@@ -1238,10 +1317,17 @@ components:
           description: List of print request summaries for the certificate.
           items:
             $ref: '#/components/schemas/PrintRequestSummary'
+        photoUrl:
+          type: string
+          description: |
+            The URL of the Elector's Certificate photo. 
+            This is the photo that has been prepared and approved for the Certificate by the ERO, rather than the photo that the applicant uploaded as part of their original application.
+          example: 'http://localhost:8080/eros/city-council/certificates/photo?applicationId=507f1f77bcf86cd799439011'
       required:
         - vacNumber
         - applicationReference
         - printRequestSummaries
+        - photoUrl
     CertificateSearchSummaryResponse:
       title: CertificateSearchSummaryResponse
       description: Response containing the meta data and results of searching for Voter Authority Certificate summaries
